--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,10 @@ a {
     min-height: 75vh;
     width: 100%;
     display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
     align-items: center;
-    justify-content: center;
+    flex-wrap: wrap;
 }
 
 /* Hero section */
@@ -42,37 +44,64 @@ a {
 #hero h1{
     display: block;
     width: fit-content;
+    height: 4rem;
     font-size: 2rem;
     position: center;
     color: black;
+    margin-right: 10rem;
 }
 #hero .home_button {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 15px 40px;
+    font-size: 15px;
     color: white;
     background-color: #10c9c3;
 }
 #hero p{
     display: block;
-    width: fit-content;
-    font-size: 1rem;
+    width: 40vh;
+    line-height: 150%;
+    height: 8rem;
+    /*margin-right: 20rem;*/
+    font-size: 18px;
     position: center;
     color:#808080;
+    word-break: normal;
 }
 /* End Hero Section */
 
+/* About us */
 
 .about_front{
     min-height: 25vh;
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+#about_us_front_page h1{
+    display: block;
+    width: fit-content;
+    font-size: 1.5rem;
+    position: center;
+    color: black;
 }
 #about_us_front_page {
     background-color: #e9e9e9;
     size: cover;
 }
+#about_us_front_page p{
+    display: block;
+    width: 30rem;
+    line-height: 150%;
+    font-size: 0.8rem;
+    position: center;
+    color:#808080;
+    word-break: normal;
+}
+
+/* End About us */
 
 #header {
     position: fixed;
