--- a/css/style.css
+++ b/css/style.css
@@ -22,15 +22,15 @@ a {
     flex-wrap: wrap;
 }
 
-/* Hero section */
-#hero {
+/* home section */
+#home {
     background-image: url(/images/laptop_chair.jpg);
     background-size:cover;
     background-position:0%;
     position: relative;
     z-index: 1;
 }
-#hero::after{
+#home::after{
     content: '';
     position: absolute;
     left: 0;
@@ -41,25 +41,46 @@ a {
     opacity: .5;
     z-index: -1;
 }
-#hero h1{
+#home .home{
+    width: fit-content;
+    max-width: 1000px;
+    margin-left: 70%;
+    padding: 80px 20px;
+    justify-content: flex-start;
+    flex-direction: row-reverse;
+
+}
+#home .section_button{
+    align-self:flex;
+    display: inline-block;
+    padding: 30px 10px;
+    font-size: 15px;
+    color: black;
+    background-color: transparent;
+}
+#home .section_button:hover{
+    color:#10c9c3;
+}
+#home h1{
     display: block;
     width: fit-content;
     height: 4rem;
     font-size: 2rem;
     position: center;
     color: black;
-    margin-right: 10rem;
+    /*margin-right: 10rem;*/
 }
-#hero .home_button {
+#home .home_button {
     display: inline-block;
     padding: 15px 40px;
     font-size: 15px;
+    position: relative;
     color: white;
     background-color: #10c9c3;
 }
-#hero p{
+#home p{
     display: block;
-    width: 40vh;
+    width: fit-content;
     line-height: 150%;
     height: 8rem;
     /*margin-right: 20rem;*/
@@ -68,10 +89,9 @@ a {
     color:#808080;
     word-break: normal;
 }
-/* End Hero Section */
+/* End home Section */
 
 /* About us */
-
 .about_front{
     min-height: 25vh;
     width: 100%;
@@ -82,18 +102,20 @@ a {
 }
 #about_us_front_page h1{
     display: block;
+    height: 3rem;
     width: fit-content;
     font-size: 1.5rem;
     position: center;
     color: black;
 }
 #about_us_front_page {
-    background-color: #e9e9e9;
+    background-color: whitesmoke;
     size: cover;
 }
 #about_us_front_page p{
     display: block;
-    width: 30rem;
+    max-width: 1100px;
+    width: fit-content;
     line-height: 150%;
     font-size: 0.8rem;
     position: center;
