--- a/css/style.css
+++ b/css/style.css
@@ -71,14 +71,14 @@ a {
 }
 
 .design_develop_container{
-    min-height: 75vh;
+    min-height: 800px;
     width: 100%;
     display: flex;
     justify-content: flex-end;
 }
 #home .header_design_develop{
     max-width: 600px;
-    padding: 80px 0px;
+    padding: 250px 0px;
     justify-content: end;
     flex-direction: row-reverse;
     margin-right: 50px;
@@ -145,20 +145,73 @@ a {
     margin-right: auto;
     width: 30%;
 }
-
 /* End About us */
 
-#header {
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: auto;
-}
 
-#header .header {
-    min-height: 8vh;
-    background-color: aquamarine;
-    transition: 0.3s ease;
-}
+
+/* Professional skills */
+#professional_skills .professional_skills_container {
+    height: 800px;
+    position: relative;
+  }
+
+  #professional_skills .professional_skills_container:before {
+    content: "";
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(to right, rgba(255, 255, 255, 1) 30%, rgba(255, 255, 255, 0) 80%);
+    z-index: -1;
+  }
+
+  #professional_skills .professional_skills_container:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: url(/images/envelope.jpg) no-repeat top right;
+    background-size: contain;
+    z-index: -2;
+  }
+  #professional_skills .professional {
+    z-index: 1;
+    width: 800px;
+    height: 100%;
+    padding-top: 250px;
+    padding-bottom: 200px;
+    margin-left: 80px;
+    color: black;
+  }
+  #professional_skills .skill_container{
+    background-color: rgb(192, 192, 192);
+    width: 100%;
+  }
+  #professional_skills .p{
+    padding-top: 40px;
+    padding-bottom: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    font-stretch: 200%;
+    word-spacing: 4px;
+  }
+  #professional_skills .skill{
+    background-color: #10c9c3;
+    color: white;
+    padding: 2px;
+    text-align: right;
+    font-size: 5px;
+  }
+  #professional_skills .UIUIX{
+    width: 75%;
+  }
+  #professional_skills .web{
+    width: 90%;
+  }
+  #professional_skills .marketing{
+    width: 65%;
+  }
