--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ a {
     right: 0;
     bottom: 0;
     left: 0;
-    background: linear-gradient(to right, rgba(255, 255, 255, 1) 30%, rgba(255, 255, 255, 0) 80%);
+    background: linear-gradient(to right, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 80%);
     z-index: -1;
   }
 
@@ -215,3 +215,34 @@ a {
   #professional_skills .marketing{
     width: 65%;
   }
+  /* End professional skills */
+
+
+  /* Icons */
+#icons {
+    height: 300px;
+    background-color: #10c9c3;
+}
+#icons .icons_container{
+    display: flex;
+    flex-direction: row;
+    background-color: azure;
+    margin-left: 5%;
+    height: 100%;
+}
+#icons .icons_subcont{
+    background-color: red;
+    display: flex;
+    height: 100%;
+    width: 25%;
+}
+#icons .single_icon{
+    width: 35%;
+    justify-content: center;
+}
+#icons .text{
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
