--- a/css/style.css
+++ b/css/style.css
@@ -226,22 +226,29 @@ a {
 #icons .icons_container{
     display: flex;
     flex-direction: row;
-    background-color: azure;
-    margin-left: 5%;
+    background-color:  #10c9c3;
+    margin-left: 0%;
     height: 100%;
 }
 #icons .icons_subcont{
-    background-color: red;
     display: flex;
     height: 100%;
     width: 25%;
 }
 #icons .single_icon{
     width: 35%;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
 }
+#icons .icon{    
+    display: block;
+    margin-left: auto;
+    margin-right: 8%;
+}
 #icons .text{
-    width: 65%;
+    width: auto;
+    color: #e9e9e9;
     display: flex;
     flex-direction: column;
     justify-content: center;
