working on photos section

--- a/css/style.css
+++ b/css/style.css
@@ -255,27 +255,52 @@ a {
 /* **********icons end************ */
 
 /* Products */
-#producs {
-    background-color: #10c9c3;
-}
 #products .products-container{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-left: 0px;
 }
 #products .single-photo{
-    display: block;
-    height: 475px;
-    width: 25%;
-    background-color: beige;
+   /* flex-basis: 1%;*/
+   display: flex;
+    position: relative;
+    /*width: calc(25% - 10px);*/
 }
-
-#products .photo_button{
-    padding: 30px 10px;
-    font-size: 15px;
-    color: black;
-    /*background-color: transparent;*/
+#products .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-#products .photo_button:hover{
-    color:#10c9c3;
-    z-index: +1;
+#products .overlay:hover{
+    opacity: 1;
 }
+#products .img{
+    width: 100%;
+    height: 100%;
+}
+@media (max-width: 1000px) {
+    #products .single-photo{
+        flex-basis: 2%;
+    }
+}
+@media (max-width: 500px){
+   #products .single-photo{
+        flex-basis: 10%;
+    }
+}
+@media (max-width: 300px){
+    #products .single-photo{
+         flex-basis: 30%;
+     }
+ }
