--- a/css/style.css
+++ b/css/style.css
@@ -321,20 +321,27 @@ a {
  #work_process .process_container{
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 1000px;
     width: 100%;
     padding: 80px;
+    margin: 0;
     background-color: white;
 
  }
- #work_process .header{
-    background-color: #10c9c3;
-    height: 300px;
+ #work_process .header{    
+    display: inline-flex;
+    flex-direction: column;
+    position:relative;
+    /*flex-shrink: 0;*/
+    /*flex-grow: 1%;*/
     width: 100%;
+    height: 150px;
+    margin: 0;
 
  }
  #work_process .text{
-    display: flex;
+    display: flex;    
     justify-content: center;
     align-items: center;
  }
@@ -342,15 +349,14 @@ a {
     display: flex;
     padding-left: 30%;
     padding-right: 30%;
-    /*padding-bottom: 3%;*/
-    justify-content: center;
-    align-items: center;
+    font-size: 17px;
     text-align: center;
     word-wrap: break-word;
     margin-top: 30px;
     color: rgb(180, 180, 180);
  }
- #work_proces .video{
+.process_container video{
     display: flex;
-    justify-self: center;
+    width: 100%;
+    position: relative;
  }
