--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,6 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 1000px;
     width: 100%;
     padding: 80px;
     margin: 0;
@@ -333,13 +332,24 @@ a {
     display: inline-flex;
     flex-direction: column;
     position:relative;
-    /*flex-shrink: 0;*/
-    /*flex-grow: 1%;*/
     width: 100%;
-    height: 150px;
     margin: 0;
-
+    background-color:;
  }
+#work_process .video{
+    margin-top: 40px;
+    width: 100%;
+    max-width: calc(100% - 70px);
+    box-sizing: border-box;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+ }
+ #work_process .video video {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+  }
  #work_process .text{
     display: flex;    
     justify-content: center;
@@ -354,9 +364,4 @@ a {
     word-wrap: break-word;
     margin-top: 30px;
     color: rgb(180, 180, 180);
- }
-.process_container video{
-    display: flex;
-    width: 100%;
-    position: relative;
- }
+ } 
