--- a/css/style.css
+++ b/css/style.css
@@ -420,3 +420,27 @@ a {
       grid-template-columns: repeat(4, 1fr);
     }
   }
+  /******************************************/ 
+  #quote{
+    background-color: #10c9c3;
+    height: auto;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    padding: 8% 25% 8% 25%;
+  }
+  #quote cite{
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    align-items: center;
+    padding-bottom: 20px;
+    word-wrap: break-word; 
+    font-style: normal;   
+  }
+  #quote p{
+    font-size: 14px;
+
+    font-weight: bold;
+    text-align: center;
+  }
